made editable fields full width & minor fix for not showing categories upon addition of new field

--- a/web-app/css/biodiv.css
+++ b/web-app/css/biodiv.css
@@ -2589,3 +2589,20 @@ small {
     font-size:12px;
     font-weight:normal;
 }
+
+.editable-container.editable-inline {
+    width:95%;
+}
+
+.editable-container.editable-inline .editable-input {
+    width:87%;
+}
+.editable-container.editable-inline .editable-input .input-medium {
+    width:96%;
+}
+
+.wysihtml5-sandbox {
+    width:100%;
+}
+
+
